[tool.poetry]
name = "bike-helmet-ranking"
version = "1.0.0"
description = "A Python tool for fetching and filtering bicycle helmet safety data from Virginia Tech's helmet safety database"
authors = ["Igor Klepuszewski <igor.klepuszewski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
mypy = "^1.18.2"
pre-commit = "^4.4.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py38"


[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = []


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
